Lilipat ya king [[Basilio Augustín]]

--- a/Basilio_Agostuín.mw
+++ b/Basilio_Agostuín.mw
@@ -1,23 +1,1 @@
-{{Infobox President
-| name          = Basilio Augustin y Dávila
-| image         = Basilio Augustín by Fernandez of Madrid, c1880s.jpg
-| term_start    = April 11
-| term_end      = July 24, 1898
-|predecessor    = [[Fernándo Primo de Rivera]]
-|successor = [[Fermín Jáudens]]
-| order         = 113th [[Governor-General of the Philippines]]
-| birth_date    = 1840
-| birth_place   =
-| death_date    = 1910
-| death_place   = 
-|}}
-Y '''Basilio Agostuín''' sinuyu ya bilang [[Kastila]]ng [[Gobernador-Heneral]] ning [[Filipinas]] inyang [[1898]].
-<br>
-<br>
-----
-
-{{stub}}
-
-[[Category:Ding Gobernador-Heneral ning Filipinas|Agostuín, Basilio]]
-
-[[Category:Filipinas bilang Colonial ning Espanya]]
+#Redirect [[Basilio Augustín]]
