*Empty MediaWiki Message*

--- a/Basilio_Augustín.mw
+++ b/Basilio_Augustín.mw
@@ -36,9 +36,16 @@ Y  '''Basilio Augustín y Dávila'''<ref name=Karnow>{{cite-Karnow|Basilio Augus
 | PLACE OF DEATH    =
 }}
 {{DEFAULTSORT:Augustin y Davila, Basilio}}
+
+{{stub}}
+
+[[Category:Ding Gobernador-Heneral ning Filipinas|Basilio Augustín]]
+
+[[Category:Filipinas bilang Colonial ning Espanya]]
+
 [[Category:1840 births]]
 [[Category:1910 deaths]]
-[[Category:Governors-General of the Philippines]]
+
 [[Category:Captains General of the Philippines]]
 [[Category:Philippine Revolution people]]
 
