--- a/Basilio_Augustín.mw
+++ b/Basilio_Augustín.mw
@@ -1,11 +1,11 @@
 {{Infobox President
 | name          = Basilio Augustin y Dávila
 | image         = Basilio Augustín by Fernandez of Madrid, c1880s.jpg
-| term_start    = April 11
-| term_end      = July 24, 1898
+| term_start    = Abril 11
+| term_end      = Juliu 24, 1898
 |predecessor    = [[Fernándo Primo de Rivera]]
 |successor = [[Fermín Jáudens]]
-| order         = 113th [[Governor-General of the Philippines]]
+| order         = pang113 [[Governor-General of the Philippines]]
 | birth_date    = 1840
 | birth_place   =
 | death_date    = 1910
