--- a/Mississippi.mw
+++ b/Mississippi.mw
@@ -4,7 +4,7 @@
   Fullname        = State ning Mississippi|
   Flag            = Flag of Mississippi.svg |
   Flaglink      = [[Bandera ning Mississippi]] |
-  Seal            = Mississippistateseal.jpg |
+  Seal            = Mississippi-StateSeal.svg |
   Map             = Map_of_USA_highlighting_Mississippi.png |
   Nickname        = Magnolia State |
   Capital         = [[Jackson, Mississippi|Jackson]] |
