*Empty MediaWiki Message*

--- a/Georg_von_Arco.mw
+++ b/Georg_von_Arco.mw
@@ -19,8 +19,8 @@ Ing balen ning [[Arco, Idaho]], mipalagiu ya kaya inyang [[1903]].
 
 {{DEFAULTSORT:Arco, Georg von}}
 
-[[Category:1869 births]]
-[[Category:1940 deaths]]
+[[Category:1869 kebaitan]]
+[[Category:1940 kematyan]]
 [[Category:People from Wodzisław County]]
 [[Category:Aleman menimbentu]]
 [[Category:German nobility]]
