*Empty MediaWiki Message*

--- a/Mongolia.mw
+++ b/Mongolia.mw
@@ -4,7 +4,7 @@ conventional_long_name = Mongolia |
 common_name = Mongolia |
 image_flag = Flag_of_Mongolia.svg |
 image_coat = Suld.gif |
-image_map = MongoliaWorldMap.png |
+image_map = Mongolia in its region.svg |
 national_motto = Dayar Mongol|
 national_anthem = [[Bügd Nairamdakh Mongol]] |
 official_languages = [[Mongolian language|Mongolian]] |
