*Empty MediaWiki Message*

--- a/Sicily.mw
+++ b/Sicily.mw
@@ -127,7 +127,7 @@ Ing Sicily atin yang siyam a lalawigan:
 [[id:Sisilia]]
 [[io:Sicilia]]
 [[is:Sikiley]]
-[[it:Isola di Sicilia]]
+[[it:Sicilia]]
 [[ja:シチリア]]
 [[jv:Sisilia]]
 [[ka:სიცილია]]
