*Empty MediaWiki Message*

--- a/Curiosity_rover.mw
+++ b/Curiosity_rover.mw
@@ -1,4 +1,4 @@
-{{About|the planetary science robotic surface mission on Mars|the spaceflight mission|Mars Science Laboratory}}{{DISPLAYTITLE:''Curiosity'' rover}}
+{{About|planetary science robotic surface mission on Mars|the spaceflight mission|Mars Science Laboratory}}{{DISPLAYTITLE:''Curiosity'' rover}}
 {| style="float: right;background: beige; color: black"
 |-
 ! On [[Mars]] for
