*Empty MediaWiki Message*

--- a/Usain_Bolt.mw
+++ b/Usain_Bolt.mw
@@ -6,7 +6,7 @@
 | honorific-suffix = <br /><small>[[Order of Jamaica|OJ]]</small>
 | image =Usain Bolt 2012 Olympics 1.jpg
 | imagesize = 220px
-| caption =Bolt at the 2012 Summer Olympics
+| caption =I Bolt king 2012 Summer Olympics
 | nationality =[[Jamaica]]n
 | sport = [[Track and field]]
 | event = [[Sprint (running)|Sprints]]
