*Empty MediaWiki Message*

--- a/Usain_Bolt.mw
+++ b/Usain_Bolt.mw
@@ -89,7 +89,7 @@ Uling kareng kayang tagumpe king sprinting, meyaus yang "Lightning Bolt",<ref na
  
 Ya ing pekamatas panakitan a atleta king track and field.<ref>{{Cite news|url=http://www.forbes.com/sites/kurtbadenhausen/2012/08/04/how-usain-bolt-earns-20-million-a-year/|title=How Usain Bolt Earns $20 Million A Year|accessdate=2012-08-10|date=04 August 2012|work=Forbes|first=Kurt|last=Badenhausen}}</ref>
 Inaus de muring ''world’s most marketable athlete'' <ref>{{Cite news|url=http://www.sportspromedia.com/sportspro_blog/usain_bolt_is_the_worlds_most_marketable_athlete/|title=Usain Bolt is the world’s most marketable athlete|accessdate=2012-08-12|date=17 May 2011|work=SportsPro |first=Tom|last=Love}}</ref>
-and the greatest athlete ever.<ref>{{Cite news|url=http://futures.tradingcharts.com/news/futures/Jim_Souhan__Usain_Bolt_greatest_athlete_who_ever_lived_183537161.html|title=Usain Bolt greatest athlete who ever lived|accessdate=2012-08-12|date=9 August 2012|work=Futures and Commodity Market News|first=Jim|last=Souhan}}</ref><ref>{{Cite news|url=http://grg51.typepad.com/steroid_nation/2009/08/greatest-athlete-of-all-time-usain-bolt-sets-world-record-time-of-1058-seconds-100m-in-berlin.html|title='Greatest athlete of all time' -- Usain Bolt -- sets world record time of an 9.58 second 100M in Berlin|accessdate=2012-08-12|date=17 August 2009|work=SteroidNation}}</ref><ref>{{Cite news|url=http://www.telegraph.co.uk/sport/othersports/athletics/6043869/World-Athletics-Championships-To-Usain-Bolt-all-things-are-now-possible.html|title=World Athletics Championships: To Usain Bolt, all things are now possible|accessdate=2012-08-12|date=12 August 2012|work=The Telegraph}}</ref>
+ampong ''the greatest athlete ever''.<ref>{{Cite news|url=http://futures.tradingcharts.com/news/futures/Jim_Souhan__Usain_Bolt_greatest_athlete_who_ever_lived_183537161.html|title=Usain Bolt greatest athlete who ever lived|accessdate=2012-08-12|date=9 August 2012|work=Futures and Commodity Market News|first=Jim|last=Souhan}}</ref><ref>{{Cite news|url=http://grg51.typepad.com/steroid_nation/2009/08/greatest-athlete-of-all-time-usain-bolt-sets-world-record-time-of-1058-seconds-100m-in-berlin.html|title='Greatest athlete of all time' -- Usain Bolt -- sets world record time of an 9.58 second 100M in Berlin|accessdate=2012-08-12|date=17 August 2009|work=SteroidNation}}</ref><ref>{{Cite news|url=http://www.telegraph.co.uk/sport/othersports/athletics/6043869/World-Athletics-Championships-To-Usain-Bolt-all-things-are-now-possible.html|title=World Athletics Championships: To Usain Bolt, all things are now possible|accessdate=2012-08-12|date=12 August 2012|work=The Telegraph}}</ref>
 
 {{S-start}}
 {{S-ach|rec}}
