*Empty MediaWiki Message*

--- a/Usain_Bolt.mw
+++ b/Usain_Bolt.mw
@@ -80,7 +80,7 @@
 I '''Usain St. Leo Bolt''', [[Order of Jamaica|OJ]], [[Order of Distinction|C.D.]] ({{IPAc-en|icon|ˈ|juː|s|eɪ|n}};<ref>Ellington, Barbara (2008-08-31). [http://www.jamaica-gleaner.com/gleaner/20080831/lead/lead2.html He is a happy person, says Usain's mother]. ''[[Jamaica Gleaner]]''. Retrieved on 2009-08-05.</ref> a mibait anyang 21 Agosto 1986), metung yang [[Jamaica]]n a talapulaying tuturing da reng keraklan a pekamabilis a tau king kasalesayan.<ref>{{Cite news|url=http://www.tampabay.com/sports/olympics/gary-shelton-at-the-games-usain-bolt-leaves-no-doubt-he-is-the-fastest-man/1244402|title=Usain Bolt leaves no doubt he is the fastest person ever|accessdate=2012-08-10|date=05 August 2012|work=St. Petersburg Times |first=Gary|last=Shelton}}</ref><ref>{{Cite news|url=http://www.dailynews.lk/2012/08/07/spo01.asp|title=Lightning Bolt strikes London 2012|accessdate=2012-08-10|date=06 August 2012|work=Daily News|first=Dinesh|last=Weerawansa}}</ref><ref>{{Cite news|url=http://www.businessinsider.com/usain-bolt-olympics-gold-2012-8|title=Usain Bolt Striking His Famous Pose After Winning Gold At The Olympics|accessdate=2012-08-10|date=05 August 2012|work=Business Insider|first=Dinesh|last=Weerawansa}}</ref> 
 Ya ing mumunang lalaking tinalan kareng titulu king [[100 metres|100&nbsp;metres]] ampong [[200 metres|200&nbsp;metres]] [[List of world records in athletics|a record ning yatu]] manibat anyang inumpisan da ing [[pamanyukad ning oras a laganas a otomatiku]] (''fully automatic time measurements'').
 
-Kayabe la reng kayabe na king koponan, gewa ne murin ing record a pangyatu king [[4 × 100 metres relay|4×100&nbsp;metres relay]]. Ya ing makalukluk a kampeon king Olympics kareng atlung pangapalyaring (''event'') deti, ing mumunang taung sumambut anam a [[gintung medalya]] king [[Sprint (pamamulayi)|sprinting]], ampong mekatalimang kampeon king yatu (''five-time World champion''). Ya ing mumunang taung mika "double double" kapamilatan ning pamanyambut na king 100&nbsp;m and 200&nbsp;m titles kareng mitutuking Olympics (2008 ampong 2012),<ref>{{Cite news|url=http://www.latimes.com/sports/olympics/la-sp-oly-track-20120810,0,3872429.story|title=Usain  Bolt gets a legendary double-double in Olympic sprints|accessdate=2012-08-10|date=10 August 2012|work=Los Angeles Times|first=Helene|last=Elliott}}</ref> and topped this through the first "double triple" (including 4x100m relays).<ref>{{cite web|title=London 2012 Day 15: Bolt does the double – triple|url=http://www.euronews.com/2012/08/12/london-2012-day-15-bolt-does-the-double-triple/|accessdate=12 August 2012}}</ref> 
+Kayabe la reng kayabe na king koponan, gewa ne murin ing record a pangyatu king [[4 × 100 metres relay|4×100&nbsp;metres relay]]. Ya ing makalukluk a kampeon king Olympics kareng atlung pangapalyaring (''event'') deti, ing mumunang taung sumambut anam a [[gintung medalya]] king [[Sprint (pamamulayi)|sprinting]], ampong mekatalimang kampeon king yatu (''five-time World champion''). Ya ing mumunang taung mika "double double" kapamilatan ning pamanyambut na king 100&nbsp;m and 200&nbsp;m titles kareng mitutuking Olympics (2008 ampong 2012),<ref>{{Cite news|url=http://www.latimes.com/sports/olympics/la-sp-oly-track-20120810,0,3872429.story|title=Usain  Bolt gets a legendary double-double in Olympic sprints|accessdate=2012-08-10|date=10 August 2012|work=Los Angeles Times|first=Helene|last=Elliott}}</ref> at ligpusan ne ini king mumunang "double triple" (kayabe ya ing 4x100m relays).<ref>{{cite web|title=London 2012 Day 15: Bolt does the double – triple|url=http://www.euronews.com/2012/08/12/london-2012-day-15-bolt-does-the-double-triple/|accessdate=12 August 2012}}</ref> 
 
 Ing kayang lamang a mekabalbal record anyang 2009 king [[Men's 100 metres world record progression|100&nbsp;m]], manibat 9.69 (manibat king sadya nang record a pangyatu) anggang 9.58, ing pekamatas manibat anyang ning [[pamanyukad oras a lubusang otomatiku]].<ref>{{Cite news|url=http://www.washingtonpost.com/wp-dyn/content/article/2009/08/20/AR2009082004135.html|title=Jamaican Sprinters Such as Usain Bolt Quickly Reshape Nation's Identity|accessdate=2009-08-23|date=21 August 2009|work=The Washington Post |first=Paul|last=Farhi}}</ref> 
 
