milikas ya ing "acting" king "pansamantala"

--- a/Jesse_Robredo.mw
+++ b/Jesse_Robredo.mw
@@ -13,7 +13,7 @@
 | term_start          = Julio 9, 2010
 | term_end            = Agosto 18, 2012
 | predecessor         = [[Benigno Aquino III]]
-| successor           = [[Paquito Ochoa, Jr.]] <small>(acting)<ref>http://www.abs-cbnnews.com/nation/08/21/12/ochoa-designated-dilg-oic-%E2%80%93-source</ref></small>
+| successor           = [[Paquito Ochoa, Jr.]] <small>(pansamantala)<ref>http://www.abs-cbnnews.com/nation/08/21/12/ochoa-designated-dilg-oic-%E2%80%93-source</ref></small>
 |-
 | order2               =
 | president2           =
