*Empty MediaWiki Message*

--- a/Jesse_Robredo.mw
+++ b/Jesse_Robredo.mw
@@ -42,7 +42,7 @@
 | website             = www.teamrobredo.com
 | footnotes           =
 }}
-I '''Jesse Manalastas Robredo''' (Mayo 27, 1958 – Agosto 18, 2012) metung yang pulitikung Filipinong migsilbing a migsilbing [[Department of the Interior and Local Government|Secretary of the Interior and Local Government]] king administrasiun nang [[Pamuntuk ning Filipinas|Pamuntuk]] [[Benigno Aquino III]] manibat 2010 angga king kamatayan na anyang 2012.<ref name=jesserobredonameddilgchief /> Robredo was a member of the [[Liberal Party (Philippines)|Liberal Party]].
+I '''Jesse Manalastas Robredo''' (Mayo 27, 1958 – Agosto 18, 2012) metung yang pulitikung Filipinong migsilbing [[Kalihim ning Panglub ampong Lokal a Kapamahalan|Kalihim ning Panglub ampng Lokal a Kapamahalan]] king administrasiun nang [[Pamuntuk ning Filipinas|Pamuntuk]] [[Benigno Aquino III]] manibat 2010 angga king kamatayan na anyang 2012.<ref name=jesserobredonameddilgchief /> Kayanib ya i Robredo king [[Partido Liberal (Filipinas)|Partido Liberal]].
 
 Manibat kanitang 1988, anam yang terminung migsilbi i Robredo antimong Alkaldi ning [[Naga Lakanbalen]] king [[Camarines Sur]]. Antimong pamangilala da reng kayang agawa antimng alkaldi ning Naga Lakanbalen, mirinan yang galal a [[Ramon Magsaysay Award|Ramon Magsaysay Award for Government Service]] anyang 2000, ing mumunang alkalding Filipinong mika anti kaniting dangalan. Mituldu ya king Gabineti nang Pamuntuk Aquino anyang Julio 2010.<ref name=jesserobredonameddilgchief /> 
 
