*Empty MediaWiki Message*

--- a/Meles_Zenawi.mw
+++ b/Meles_Zenawi.mw
@@ -4,7 +4,7 @@
 {{Infobox officeholder
 |name           = Meles Zenawi<br>{{small|መለስ ዜናዊ}}
 |image          = Meles Zenawi - World Economic Forum Annual Meeting 2012.jpg
-|office         = [[List of heads of government of Ethiopia|Prime Minister of Ethiopia]]
+|office         = [[Listahan da reng pekapun ning kapamahalan ning Ethiopia|Pun Ministru ning Ethiopia]]
 |president      = [[Negasso Gidada]]<br>[[Girma Wolde-Giorgis]]
 |term_start     = 23 Agosto 1995
 |term_end       = 20 Agosto 2012
