--- a/Meles_Zenawi.mw
+++ b/Meles_Zenawi.mw
@@ -27,7 +27,7 @@
 |religion       = [[Ethiopian Orthodox Tewahedo Church|Ethiopian Orthodoxy]]
 }}
 {{Contains Ethiopic text}}
-I '''Meles Zenawi Asres''' ([[Ge'ez alphabet|Ge'ez]]: መለስ ዜናዊ አስረስ ''Mäläs Zenawi Äsräs''; 8 Mayo 1955&nbsp;– 20 August 2012) ing meging [[Pekapun ning kapamahalan ning Ethiopia|Pun Ministru]] ning [[Ethiopia]] manibat 1995 angga king kamatayan na anyang 2012.<ref name="tadesse1">{{cite web|last=TADESSE|first=KIRUBEL|title=Ethiopian Prime Minister Meles Zenawi Dead at 57|url=http://abcnews.go.com/International/wireStory/ethiopian-prime-minister-meles-zenawi-dead-57-17046465#.UDMeR6mPUl8|publisher=ABC News|accessdate=21 August 2012}}</ref> Manibat 1985, talapamuntuk (''chairman'') ne ning [[Tigrayan Peoples' Liberation Front]] (TPLF), ampong pekapun ne ning makalukluk a [[Ethiopian People's Revolutionary Democratic Front]] (EPRDF). Migsilbi yang [[Pamuntuk ning Ethiopia]] manibat 1991 anggang 1995, at megi yang [[Listahan da reng pekapun ning kapamahalan ning Ethiopia|Pun Ministru]] ning Ethiopia anyang 1995 kaybat ning pangkabilugan a alalan ning banuang ita. Mepuri ya ing kayang kapamahalan kareng reporma o kapanumanan anti ing sistemang pampulitika da reng dakal a partidu (''multi-party political system'') king Ethiopia, ing pamagumpisa da reng pribadung pahayagan, ampo ing pangabawas da reng anak a mangamate, sasangkanan de murin ing kayang kapamahalan king pamangabát a pampulitika introduction of private press in Ethiopia and decreased child mortality rates, his government was also accused of (''political repression'') ampong miayaliwang pamanabusu king karapatang pantau.<ref>{{cite web|author=David Smith in Johannesburg |url=http://www.guardian.co.uk/world/2012/aug/21/ethiopia-meles-zenawi-dies-illneses?newsfeed=true |title=Ethiopia's Meles Zenawi dies of undisclosed illness |publisher=Guardian |date=|accessdate=2012-08-21}}</ref><ref>{{cite news|title=Ethiopian leader Meles Zenawi dies|url=http://www.aljazeera.com/news/africa/2012/08/201282144342545378.html|accessdate=21 August 2012|newspaper=Al Jazeera}}</ref> Known as one of Africa's [[autocrat|strongmen]], he was a key ally of the [[United States]] in the [[war on terror]].
+I '''Meles Zenawi Asres''' ([[Ge'ez alphabet|Ge'ez]]: መለስ ዜናዊ አስረስ ''Mäläs Zenawi Äsräs''; 8 Mayo 1955&nbsp;– 20 August 2012) ing meging [[Pekapun ning kapamahalan ning Ethiopia|Pun Ministru]] ning [[Ethiopia]] manibat 1995 angga king kamatayan na anyang 2012.<ref name="tadesse1">{{cite web|last=TADESSE|first=KIRUBEL|title=Ethiopian Prime Minister Meles Zenawi Dead at 57|url=http://abcnews.go.com/International/wireStory/ethiopian-prime-minister-meles-zenawi-dead-57-17046465#.UDMeR6mPUl8|publisher=ABC News|accessdate=21 August 2012}}</ref> Manibat 1985, talapamuntuk (''chairman'') ne ning [[Tigrayan Peoples' Liberation Front]] (TPLF), ampong pekapun ne ning makalukluk a [[Ethiopian People's Revolutionary Democratic Front]] (EPRDF). Migsilbi yang [[Pamuntuk ning Ethiopia]] manibat 1991 anggang 1995, at megi yang [[Listahan da reng pekapun ning kapamahalan ning Ethiopia|Pun Ministru]] ning Ethiopia anyang 1995 kaybat ning pangkabilugan a alalan ning banuang ita. Mepuri ya ing kayang kapamahalan kareng reporma o kapanumanan anti ing sistemang pampulitika da reng dakal a partidu (''multi-party political system'') king Ethiopia, ing pamagumpisa da reng pribadung pahayagan, ampo ing pangabawas da reng anak a mangamate, sasangkanan de murin ing kayang kapamahalan king pamangabát a pampulitika introduction of private press in Ethiopia and decreased child mortality rates, his government was also accused of (''political repression'') ampong miayaliwang pamanabusu king karapatang pantau.<ref>{{cite web|author=David Smith in Johannesburg |url=http://www.guardian.co.uk/world/2012/aug/21/ethiopia-meles-zenawi-dies-illneses?newsfeed=true |title=Ethiopia's Meles Zenawi dies of undisclosed illness |publisher=Guardian |date=|accessdate=2012-08-21}}</ref><ref>{{cite news|title=Ethiopian leader Meles Zenawi dies|url=http://www.aljazeera.com/news/africa/2012/08/201282144342545378.html|accessdate=21 August 2012|newspaper=Al Jazeera}}</ref> Metung ya kareng pikabaluan a masikan pamanalan king upaya (''strongmen'') king Africa, at metung ya kareng ka-aliadu ning [[Estados Unidos]] king kayang [[war on terror]].
 
 ==Suglung palwal==
 {{Commons category}}
