*Empty MediaWiki Message*

--- a/Template:Contains_Ethiopic_text.mw
+++ b/Template:Contains_Ethiopic_text.mw
@@ -2,7 +2,7 @@
 | section    = {{{1|}}}
 | special    = [[Ge'ez script|Sulat a Ethiopic]]
 | image      = {{{image|Ge'ez.svg}}}
-| characters = Ethiopic characters
+| characters = lipat da reng sulat a Ethiopic 
 | fix        = Help:Multilingual support (Ethiopic)
 }}<noinclude>{{documentation}}
 </noinclude>
