--- a/Uzbekistan.mw
+++ b/Uzbekistan.mw
@@ -3,7 +3,7 @@
 |common_name = Uzbekistan
 |image_flag = Flag of Uzbekistan.svg
 |image_coat = Uzbekistan coa.png
-|image_map = LocationUzbekistan.png
+|image_map = Uzbekistan in its region.svg
 |national_motto = none
 |national_anthem = [[National Anthem of the Republic of Uzbekistan]]
 |official_languages = [[Uzbek language|Uzbek]]
