r2.7.2) (robot dinagdag: [[uz:Facebook]]

--- a/Facebook.mw
+++ b/Facebook.mw
@@ -191,6 +191,7 @@ Agpang king pamanialugsug o pamagaral aniang Enero 2009 ning [[Compete.com]], in
 [[ug:Facebook]]
 [[uk:Facebook]]
 [[ur:فیس بک]]
+[[uz:Facebook]]
 [[vec:Facebook]]
 [[vep:Facebook]]
 [[vi:Facebook]]
