*Empty MediaWiki Message*

--- a/Richard_DeVos.mw
+++ b/Richard_DeVos.mw
@@ -21,7 +21,7 @@
 | successor     =
 | party         =
 | religion      = Christian Reformed Church in North America 
-| spouse        = Asawa, Helen DeVos
+| spouse        = Helen DeVos
 | children      = [[Dick DeVos]], Dan DeVos, Cheri DeVos-Vanderweide, Doug DeVos
 }}
 
