*Empty MediaWiki Message*

--- a/Template:Infobox_person.mw
+++ b/Template:Infobox_person.mw
@@ -76,7 +76,7 @@
 | data20     = {{{agent|}}}
 | class20    = agent
 
-| label21    = Kilala ya&nbsp;king
+| label21    = Kilala ya&nbsp;antimong
 | data21     = {{{known for|{{{known_for|{{{known|}}}}}}}}}
 
 | label22    = Manimunang obra
