--- a/Richard_DeVos.mw
+++ b/Richard_DeVos.mw
@@ -25,7 +25,7 @@
 | children      = [[Dick DeVos]], Dan DeVos, Cheri DeVos-Vanderweide, Doug DeVos
 }}
 
-I '''Richard DeVos, Sr.''' (mibait Marzo 4, 1926, [[Grand Rapids, Michigan]]) metung yang negosianting [[Estados Unidos |Americanu]], a mitátag king [[Amway]] kayabe ya i [[Jay Van Andel]] (mibayu ya pangabalangkas ing kumpanya at mipalagyuan yang [[Alticor]] anyang 2000), ampong makibandi ning koponang basketball a [[Orlando Magic]] [[NBA]]. Anyang 2012, linista ne ning magasin a ''[[Forbes]]'' antimong ka-60ng pekamakualtang tau king Estados Unidos, ampong ka-205ng pekamakwalta king yatu, a maki pibandyan a tatantyan dang USD$ 5 billion.<ref>[http://www.forbes.com/profile/richard-devos Forbes magazine profile of Richard DeVos] Forbes.com. Accessed March 2012.</ref> (Misan, miyabe ya kareng apulung pekamakualtang Americanu).
+I '''Richard DeVos, Sr.''' (mibait Marzo 4, 1926, [[Grand Rapids, Michigan]]) metung yang negosianting [[Estados Unidos |Americanu]], a mitátag king [[Amway]] kayabe ya i [[Jay Van Andel]] (mibayu ya pangabalangkas ing kumpanya at mipalagyuan yang [[Alticor]] anyang 2000), ampong makibandi ning koponang basketball a [[Orlando Magic]] [[NBA]]. Anyang 2012, linista ne ning magasin a ''[[Forbes]]'' antimong ka-60ng pekamakualtang tau king Estados Unidos, ampong ka-205ng pekamakualta king yatu, a maki pibandyan a tatantyan dang USD$ 5 billion.<ref>[http://www.forbes.com/profile/richard-devos Forbes magazine profile of Richard DeVos] Forbes.com. Accessed March 2012.</ref> (Misan, miyabe ya kareng apulung pekamakualtang Americanu).
 
 Megaral ya i DeVos king [[Calvin College]], ampong kayanib ya king [[Sigma Phi Epsilon]] Fraternity. Migsilbi ya king militar anyang Kadwang Gerang Pangyatu king [[United States Army Air Corps]].<ref>The Possible Dream, by Charles Paul Conn, page 6</ref>
 
