--- a/Suligi.mw
+++ b/Suligi.mw
@@ -1,6 +1,6 @@
 {{otheruses}}
 <div style="float:right;margin:0 0 1em 1em">
-[[Image:CompostBinTube wb.jpg|thumb|none|A pitchfork next to a [[compost]] bin]]<br clear="all">
+[[Image:CompostBinTube wb.jpg|thumb|none|Metung a suligi lele ning piugsyanan bulung]]<br clear="all">
 [[Image:Haying.jpg|thumb|250px|none|Pitching hay]]</div>
 Ing '''suligi''' (''pitchfork'' king Ingles, ''horca'' king Castila) metung yang [[kasangkapan]] a maki makabang talanan ampong mangakaba, payat ampong mikakawaning tusuk a gagamitan king pamamulut ampong pamanatsa kareng bageng buhaghag o kawa-kawani, alimbawa [[are]], [[bulung]], [[ubas]] ampong aliwa pang produktu kareng asikan. Keraklan, manibat adua la anggang anam deng tusuk da reng suligi. Miyayaliwa la kaba deti dependi king gamit ning kasangkapan. Kawangis ne ing [[w:spading fork|spading fork]], at maralas, apapagkamalian do reting adua. Malyari yang gawa king dutung, bakal, kuayan, aduang uri ning metal a pisamut, atlwp. Keraklan, kareng asikan ya magagamit iti, at tuturing deng kasangkapan a pang-agricultura.  
 
