--- a/Suligi.mw
+++ b/Suligi.mw
@@ -18,6 +18,8 @@ Keraklan, gagamitan de ing suligi king satirika ning paniwalang Cristianu tungku
 [[Category:Gardening tools]]
 [[Category:Forks]]
 
+{{Types of tools}}
+
 [[an:Forca]]
 [[be:Вілы]]
 [[br:Forc'h]]
