*Empty MediaWiki Message*

--- a/Gunting.mw
+++ b/Gunting.mw
@@ -1,5 +1,5 @@
 [[File:Scissors.jpg|right|frame|Miyayaliwang gunting - para king papil, kusina, ampong pamanayi]]
-Deng '''gunting''' (‘’scissors’’ king Inglis) [[kasangkapan]] lang magagamit king pamangupit king maimpis a materialis a mangailangan mung ditak a [[puersa]] o sikanan.
+Deng '''gunting''' (''scissors'' king Inglis, ''tijeras'' king Castila) [[kasangkapan]] lang magagamit king pamangupit king maimpis a materialis a mangailangan mung ditak a [[puersa]] o sikanan.
 
 Gagamitan la reti king pamamutut, alimbawa, king [[papil]], [[kartun]], [[palara]], maimpis a [[plastic]], pamangan, [[tela]], [[lubid]], ampong [[kawad]]. Maliari la muring gamitan king pamanurud king [[buak]] deng gunting. 
 
@@ -62,6 +62,8 @@ Kareng makatuking kasangkapan, mitatagkil la reng taram at apsalan de ing materi
 [[Category:Scissors| ]]
 [[Category:Sewing equipment]]
 [[Category:Embroidery equipment]]
+
+{{Types of tools}}
 
 [[an:Estixeras]]
 [[ar:مقص]]
