*Empty MediaWiki Message*

--- a/Gunting.mw
+++ b/Gunting.mw
@@ -1,5 +1,5 @@
 [[File:Scissors.jpg|right|frame|Miyayaliwang gunting - para king papil, kusina, ampong pamanayi]]
-Deng '''gunting''' (''scissors'' king Inglis, ''tijeras'' king Castila) [[kasangkapan]] lang magagamit king pamangupit king maimpis a materialis a mangailangan mung ditak a [[puersa]] o sikanan.
+Deng '''gunting''' (''scissors'' king Ingles, ''tijeras'' king Castila) [[kasangkapan]] lang magagamit king pamangupit king maimpis a materialis a mangailangan mung ditak a [[puersa]] o sikanan.
 
 Gagamitan la reti king pamamutut, alimbawa, king [[papil]], [[kartun]], [[palara]], maimpis a [[plastic]], pamangan, [[tela]], [[lubid]], ampong [[kawad]]. Maliari la muring gamitan king pamanurud king [[buak]] deng gunting. 
 
