r2.7.2) (robot dinagdag: [[pcd:Finlande]]

--- a/Finlandia.mw
+++ b/Finlandia.mw
@@ -240,6 +240,7 @@ Ing Finland pang labing atlu yang ranku agpang keng 2005 [[United Nations]] [[Hu
 [[or:ଫିନଲ୍ୟାଣ୍ଡ]]
 [[os:Финлянди]]
 [[pap:Finlandia]]
+[[pcd:Finlande]]
 [[pih:Finland]]
 [[pl:Finlandia]]
 [[pms:Finlandia]]
