*Empty MediaWiki Message*

--- a/Pat.mw
+++ b/Pat.mw
@@ -24,7 +24,7 @@ King pamandukit kuayan ampong dutung, gagamitan de murin ing ''[[pat lukub]]'', 
 [[cs:Dláto]]
 [[da:Stemmejern]]
 [[de:Beitel]]
-[[en:Japanese chisel]]
+[[en:Chisel]]
 [[es:Formón]]
 [[fi:Taltta]]
 [[fr:Ciseau à bois]]
