--- a/Pat.mw
+++ b/Pat.mw
@@ -19,24 +19,27 @@ King pamandukit kuayan ampong dutung, gagamitan de murin ing ''[[pat lukub]]'', 
 
 {{Types of tools}}
 
-[[az:İskənə]]
-[[ca:Enformador]]
-[[cs:Dláto]]
-[[da:Stemmejern]]
-[[de:Beitel]]
-[[en:Chisel]]
-[[es:Formón]]
-[[fi:Taltta]]
-[[fr:Ciseau à bois]]
-[[hu:Véső]]
-[[ja:鑿]]
-[[nl:Beitel]]
-[[no:Stemjern]]
-[[pl:Dłuto]]
-[[ru:Долото]]
-[[sr:Длето]]
-[[sv:Stämjärn]]
-[[te:ఉలి]]
-[[tl:Pait]]
-[[tr:İskarpela]]
-[[uk:Долото]]
+[[ar:إزميل]]
+[[br:Kizell]]
+[[ca:Cisell]]
+[[cs:Sekáč (nástroj)]]
+[[de:Meißel]]
+[[es:Cincel]]
+[[eo:Ĉizilo]]
+[[fa:اسکنه]]
+[[fr:Ciseau]]
+[[it:Scalpello]]
+[[he:אזמל]]
+[[pam:Pat]]
+[[kk:Тескіш]]
+[[nl:Steenbeitel]]
+[[ja:鏨]]
+[[pl:Przecinak]]
+[[pt:Cinzel]]
+[[ru:Зубило]]
+[[scn:Scarpeddu]]
+[[simple:Chisel]]
+[[sv:Huggmejsel]]
+[[tt:Кискеч]]
+[[uk:Зубило]]
+[[war:Tigib]]
