*Empty MediaWiki Message*

--- a/Pat.mw
+++ b/Pat.mw
@@ -24,6 +24,7 @@ King pamandukit kuayan ampong dutung, gagamitan de murin ing ''[[pat lukub]]'', 
 [[ca:Cisell]]
 [[cs:Sekáč (nástroj)]]
 [[de:Meißel]]
+[[en:Chisel]]
 [[es:Cincel]]
 [[eo:Ĉizilo]]
 [[fa:اسکنه]]
