*Empty MediaWiki Message*

--- a/Pat.mw
+++ b/Pat.mw
@@ -1,9 +1,9 @@
 [[Image:Chisel.jpeg|thumb|right|Pat a gawa king bakal a gagamitan king dutung.]]
 Ing '''pat''' metung yang [[w:tool|kasangkapan]] nung nu itang taram maki partikular yang tabas, a magagamit king pamandukit ampong pamamutut king metung a masias a material, alimbawa ing [[dutung]], [[batu]] o [[metal]]. Gawa la king metal o dutung a maki mataram a gilid deng talanan da ampong taram deng mapilan a klasing pat. 
 
-Gagamitan ya ing pat kapamilatan ning pamamukpuk na niti king metung a bage ba yang maputut iti. Maliari yang manibat iting puersa king gamat, o kapamilatan ning masu o martiliu. Kareng pabrika, metung yang [[hydraulic ram]] o mababaldug a pabayat ('[[trip hammer]]') ing panibatan ning puersa ba yang ipukpuk ketang bageng pupututan ing pat.
+Gagamitan ya ing pat kapamilatan ning pamamukpuk na niti king metung a bage ba yang maputut iti. Maliari yang manibat iting puersa king gamat, o kapamilatan ning masu o martiliu. Kareng pabrika, metung yang [[hydraulic ram]] o mababaldug a pabayat ('[[trip hammer]]') ing panibatan ning puersa ba yang ipukpuk ketang bageng pupututan ning pat.
 
-King pamandukit kuayan ampong dutung, gagamitan de murin ing ''[[pat lukub]]'', ba lang labran o tabasan deng mangalating pirasu ibat ketang dutung a dudukitan. Keraklan, gagamitan la reti king pamangawang kilual (surface) a concave. Keraklan, katabas yang 'U' iti nung lon ya ing kayeng dakeng binangal (cross section).
+King pamandukit kuayan ampong dutung, gagamitan de murin ing ''likup'', ''lukub'' o ''pat lukub'', ba lang labran o tabasan deng mangalating pirasu ibat ketang dutung a dudukitan. Keraklan, gagamitan la reti king pamangawang kilual (surface) a concave. Keraklan, katabas yang 'U' iti nung lon ya ing kayeng dakeng binangal (cross section).
 
 ==Lon la murin deti==
 {{commons|chisels|pat}}
