*Empty MediaWiki Message*

--- a/Suligi.mw
+++ b/Suligi.mw
@@ -2,7 +2,7 @@
 <div style="float:right;margin:0 0 1em 1em">
 [[Image:CompostBinTube wb.jpg|thumb|none|Metung a suligi lele ning piugsyanan bulung]]<br clear="all">
 [[Image:Haying.jpg|thumb|250px|none|Pitching hay]]</div>
-Ing '''suligi''' (''pitchfork'' king Ingles, ''horca'' king Castila) metung yang [[kasangkapan]] a maki makabang talanan ampong mangakaba, payat ampong mikakawaning tusuk a gagamitan king pamamulut ampong pamanatsa kareng bageng buhaghag o kawa-kawani, alimbawa [[are]], [[bulung]], [[ubas]] ampong aliwa pang produktu kareng asikan. Keraklan, manibat adua la anggang anam deng tusuk da reng suligi. Miyayaliwa la kaba deti dependi king gamit ning kasangkapan. Kawangis ne ing [[w:spading fork|spading fork]], at maralas, apapagkamalian do reting adua. Malyari yang gawa king dutung, bakal, kuayan, aduang uri ning metal a pisamut, atlwp. Keraklan, kareng asikan ya magagamit iti, at tuturing deng kasangkapan a pang-agricultura.  
+Ing '''suligi''' (''pitchfork'' king Ingles, ''horca'' king Castila) metung yang [[kasangkapan]] a maki makabang talanan ampong mangakaba, payat ampong mikakawaning tusuk a gagamitan king pamamulut ampong pamanatsa kareng bageng buhaghag o kawa-kawani, alimbawa [[are]], [[bulung]], [[ubas]] ampong aliwa pang produktu kareng asikan. Keraklan, manibat adua la anggang anam deng tusuk da reng suligi. Miyayaliwa la kaba deti dependi king gamit ning kasangkapan. Kawangis ne ing [[w:spading fork|spading fork]], at maralas, apapagkamalian do reting adua. Malyari yang gawâ king dutung, bakal, kuayan, aduang uri ning metal a pisamut, atlwp. Keraklan, kareng asikan ya magagamit iti, at tuturing deng kasangkapan a pang-agrikultura.  
 
 Maralas, gagamitan de muring [[sandata]] ing suligi deng tau nung e ra agiung sali kareng mas mangamal a sandata antimo reng [[espada]], o kaibat, deng [[baril]]. Uli na niti, kasebian deng gagamitan deng kumpul-kumpul a ortelanung mikakalabkab king kamua. 
 
