*Empty MediaWiki Message*

--- a/Piruya.mw
+++ b/Piruya.mw
@@ -3,7 +3,7 @@
 [[File:GrassRake.jpg|thumb|right|Metung a piruyang pang-mayan a obra para king dikut ampong bulung]]
 }}
 
-Ing '''piruya''', '''pangamus''' o '''kaleke''' (‘’rake’’ king Ingles), metung yang kasangkapan a gagamitan da king pamananaman; bibilugan ne ning rehas a maki ipan, at makatuglung king talanan. Iti magagamit ya king pamanipun [[bulung]], [[are]], [[dikut]], atlwp., king pamananaman king mula, king pamangambul king gabun, pamamutput kareng mangalating dikut, pamagpante king gabun, at keraklan, kareng obra nung nu ya magagamit ing [[asue]] king asikan.
+Ing '''piruya''', '''pangamus''' o '''kaleke''' (''rake'' king Ingles, ''rastrillo'' king Castila), metung yang kasangkapan a gagamitan da king pamananaman; bibilugan ne ning rehas a maki ipan, at makatuglung king talanan. Iti magagamit ya king pamanipun [[bulung]], [[are]], [[dikut]], atlwp., king pamananaman king mula, king pamangambul king gabun, pamamutput kareng mangalating dikut, pamagpante king gabun, at keraklan, kareng obra nung nu ya magagamit ing [[asue]] king asikan.
 
 Keraklan, maki ipan lang [[aseru]], [[plastic]], o [[kuayan]] deng makabayung piruyang pang-gamat, dapot kanitang minuna, gawá la reti king [[dutung]] o [[bakal]]. Ita namang talanan, gawá ya king dutung o metal. Nung mas makaba la ipan deng piruya, malyaring maka-ayus la reti anti kareng tutuklip a [[w:fan|abaniku]] ketang minuna. Ating mangaragul a bersion a makatumpak kareng parugang, a maki rehas nung nu la makatuglung deng mangakabang ipan a baluktut at makagawa king bakal, at magagamit kayabe da reng [[traktora]]. Ibat la reti king metung a kasangkapan a igutan dang [[kabayu]], a gagamitan da bayu di makina ing pamanasik. 
 
