*Empty MediaWiki Message*

--- a/Piruya.mw
+++ b/Piruya.mw
@@ -1,6 +1,6 @@
 {{imagestack|
 [[File:SoilRake.jpg|thumb|right|Metung a piruyang pang-mabayat a obra (heavy duty) para king gabun ampong batu]]
-[[File:GrassRake.jpg|thumb|right|Metung a piruyang pang-mayan a obra para king dikut ampong bulung]]
+[[File:GrassRake.jpg|thumb|right|Piruyang pang-mayan a obra para king dikut ampong bulung]]
 }}
 
 Ing '''piruya''', '''pangamus''' o '''kaleke''' (''rake'' king Ingles, ''rastrillo'' king Castila), metung yang kasangkapan a gagamitan da king pamananaman; bibilugan ne ning rehas a maki ipan, at makatuglung king talanan. Iti magagamit ya king pamanipun [[bulung]], [[are]], [[dikut]], atlwp., king pamananaman king mula, king pamangambul king gabun, pamamutput kareng mangalating dikut, pamagpante king gabun, at keraklan, kareng obra nung nu ya magagamit ing [[asue]] king asikan.
