*Empty MediaWiki Message*

--- a/Balbiki.mw
+++ b/Balbiki.mw
@@ -6,9 +6,9 @@ Metung yang uri ning [[w:crankshaft|sigunial]] (crankshaft) itang dakeng tabas-U
 Ing arap ning balbiki bibilugan ne ning metung a [[w:chuck (engineering)|chuck]] [[w:spindle]] a maki bracket a tabas-V o [[w:clamp|panyipit]] king kilub. Nung idurut ya ing spindle ning chuck king direksiun a pa-wanan a padurut (clockwise), tátalik ya itang [[taram barena]] ning chuck, at nung baligtaran ne man ing direksiun, liliwalas ya iti ba yang malyaring ilako. 
 
 [[Image:PalmercarpenterA.jpg|thumb|left|Metung a [[w:carpenter|anluagi]]ng gagamit balbiki]]
-Karing keraklan kareng balbiki, keta mismung gulut ning chuck ating [[w:gear]] release a maki atlung pusisiun. Paintulutan na niti ing [[w:ratchet (device)|ratcheting]] kareng mangaskup a lugal. Nung idurut ya ing gear release manibat king pusisiun a makalibutad, malyaring mika ratcheting ning balbiki ketang direksiun a kailangan. Nung itodu yang pa-wanan (clockwise) ing pamandurut ning gear release, malyari yang ilako ing dutung king direksiun a pa-wanan (padurut), kabang pa-kaili ne mang padurut (counter-clockwise) ing kimut ning ratchet. Kaibat, nung itodu yang pa-kaili ing pamandurut ning gear, malyari yang idurut ing balbiki king direksiung pa-kaili, keraklan ba yang idayu king busbus itang drill bit. Uling makalibutad ya pusisiun ing gear release, e marapat ing ratcheting effect.
+Karing keraklan kareng balbiki, keta mismung gulut ning chuck ating [[w:gear]] release a maki atlung pusisiun. Paintulutan na niti ing [[w:ratchet (device)|''ratcheting'']] kareng mangaskup a lugal. Nung idurut ya ing gear release manibat king pusisiun a makalibutad, malyaring mika ratcheting ning balbiki ketang direksiun a kailangan. Nung itodu yang pa-wanan (''clockwise'') ing pamandurut ning gear release, malyari yang ilako ing dutung king direksiun a pa-wanan (padurut), kabang pa-kaili ne mang padurut (''counter-clockwise'') ing kimut ning ratchet. Kaibat, nung itodu yang pa-kaili ing pamandurut ning gear, malyari yang idurut ing balbiki king direksiung pa-kaili, keraklan ba yang idayu king busbus itang drill bit. Uling makalibutad ya pusisiun ing gear release, e marapat ing ratcheting effect.
 
-Atin yang dutung a spindle ing maniketa (o crank) a tabas-U; malyari yang taglus-taglus a idurut lalam da reng gamat kayabe ya ing top spindle, a e gagasgas kareng gamat iti (anya e la mamalintusan deng gamat).
+Atin yang dutung a spindle ing maniketa (o ''crank'') a tabas-U; malyari yang taglus-taglus a idurut lalam da reng gamat kayabe ya ing top spindle, a e gagasgas kareng gamat iti (anya e la mamalintusan deng gamat).
 
 {{Types of tools}}
 
