*Empty MediaWiki Message*

--- a/Thanh_Hoa_Lalawigan.mw
+++ b/Thanh_Hoa_Lalawigan.mw
@@ -113,9 +113,12 @@ Thanh Hóa has the Hoang Long Antique [[Museum]], and the large [[Roman Catholic
 [[Category:Lalawigan tungku king Vietnam]]
 [[Category:Distritu ning Thanh Hoa Lalawigan]]
 
+[[bi:Thanh Hoa]]
 [[en:Thanh Hóa]]
 [[fr:Thanh Hóa]]
+[[ht:Thanh Hoa]]
 [[kl:Thanh Hoa]]
+[[kw:Thanh Hoa]]
 [[lt:Tanhoa]]
 [[nl:Thanh Hóa (stad in Thanh Hóa)]]
 [[no:Thanh Hoa]]
