*Empty MediaWiki Message*

--- a/Paul_Zane_Pilzer.mw
+++ b/Paul_Zane_Pilzer.mw
@@ -12,7 +12,7 @@
 | spouse = Lisa Dang Pilzer
 | website = [http://www.paulzanepilzer.com www.paulzanepilzer.com]
 }}
-I '''Paul Zane Pilzer''' (mibait Enero 17, 1954) metung yang [[ekonomista]]ng Americanu, talasulat bestseller, ''[[New York Times]]'' <ref>[http://www.nytimes.com/1996/02/04/business/the-new-york-times-business-best-sellers.html?scp=5&sq=god%20wants%20you%20to%20be%20rich%20pilzer&st=cse ''God Wants You To Be Rich'' best-seller listing], ''The New York Times'', February 4, 1996</ref> ampong [[social entrepreneur]]. Mekasulat neng siam a libru, migsilbi ne kareng administrasyun da reng adwang pamuntuk o presidenti ning Estados Unidos, talatátag de reng anam a kumpanya, at mibili ne king mumunang bulung (''front page'') ning ''[[The Wall Street Journal]]''.<ref>Chad Terhune, [http://online.wsj.com/article/SB118575682869181838.html "Employers Turn To Alternative For Insuring Staff"], ''The Wall Street Journal'', July 30. 2007</ref><ref>Chad Terhune, [http://www.paulzanepilzer.com/wsj073007.pdf "Employers Turn To Alternative For Insuring Staff"], ''The Wall Street Journal'', July 30. 2007</ref>
+I '''Paul Zane Pilzer''' (mibait Enero 17, 1954) metung yang [[ekonomista]]ng Americanu, talasulat bestseller king ''[[New York Times]]'' <ref>[http://www.nytimes.com/1996/02/04/business/the-new-york-times-business-best-sellers.html?scp=5&sq=god%20wants%20you%20to%20be%20rich%20pilzer&st=cse ''God Wants You To Be Rich'' best-seller listing], ''The New York Times'', February 4, 1996</ref> ampong [[social entrepreneur]]. Mekasulat neng siam a libru, migsilbi ne kareng administrasyun da reng adwang pamuntuk o presidenti ning Estados Unidos, talatátag de reng anam a kumpanya, at mibili ne king mumunang bulung (''front page'') ning ''[[The Wall Street Journal]]''.<ref>Chad Terhune, [http://online.wsj.com/article/SB118575682869181838.html "Employers Turn To Alternative For Insuring Staff"], ''The Wall Street Journal'', July 30. 2007</ref><ref>Chad Terhune, [http://www.paulzanepilzer.com/wsj073007.pdf "Employers Turn To Alternative For Insuring Staff"], ''The Wall Street Journal'', July 30. 2007</ref>
 
 ==Dalerayan==
 {{reflist|2}}
